# aigt

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  License.txt  README.md  consolidate_metrics_.py  utils.py
Config/: ScoliUsFlatMarkers2.ttp  ScoliUsOptiTrack.ttp  ScoliosisFlatMarkers2.ttp  ScoliosisScan.xml  Spine.ttp  SpineCalibration.xml  SpineScan.xml  TrioProbeCalibration.xml  TrioProbeStylus.ttp
DeepLearnLive/: CMakeLists.txt
DeepLearnLive/Config/: PlusDeviceSet_Server_MmfColorVideoCapture.xml
DeepLearnLive/DataCollection/: CMakeLists.txt  DataCollection.py  (+1 more)
DeepLearnLive/RunNeuralNet/: CMakeLists.txt  RunNeuralNet.py
DeepLearnLive/RunNeuralNet/Resources/UI/: RunNeuralNet.ui
DeepLearnLive/RunNeuralNet/Scripts/: StartNeuralNet.bat  TemplateNetworkFile.txt  kerasNeuralNetwork.py  openCMDPrompt.bat
HerniaAnnotation/: HerniaModelStudyConfig.xml  OptitrackProfile1.motive  README.md
HerniaAnnotation/HerniaCode/HerniaExtension/: CMakeLists.txt
HerniaAnnotation/HerniaCode/HerniaExtension/HerniaAnnotationModule/: CMakeLists.txt  HerniaAnnotationModule.py
HerniaRepairTutor/: CMakeLists.txt
LiveFeedback/: CentralLinePhantom1.py  CentralLinePhantom1_weights_2019-01-25_11-44-26.h5  CentralLinePhantom1_weights_2019-01-27_11-27-44.h5  LiveModels.py  Segmentation1.py
LiveFeedbackExtension/: CMakeLists.txt
LiveFeedbackExtension/LiveFeedbackModule/: CMakeLists.txt  LiveFeedbackModule.py
Models/: AddTrackerToNeedle.bat  segmentation_unet.py
Notebooks/: ClassesToFolders.ipynb  FoldersToPickles.ipynb  FoldersToSavedArrays.ipynb  ImageClassification-CAM1.ipynb  ImageClassificationFromScratch1.ipynb  ImageClassificationInception.ipynb  ImageClassificationInception1.ipynb  SegmentationDataToArrays.ipynb  SegmentationTraining.ipynb  ShowNumpyData.ipynb  SingleObjectLocTutorial_01_GenerateImages.ipynb  SingleObjectLocTutorial_02_Localization.ipynb  SingleObjectLocTutorial_03_Classification-CAM.ipynb  SingleObjectLocTutorial_04_ClassCAM-FasterInput.ipynb  SplitAnnotatedData.ipynb  UltrasoundSegmentationSmallNetwork.ipynb
Scripts/: Slicer_TrimSequence.py
SequenceLabeller/: CMakeLists.txt  SequenceLabeller.py
SetupAnaconda/: paths_update.bat  setup_cuda09.bat  setup_cuda10.bat  setup_env.bat  setup_env_tf1.bat
SlicerExtension/LiveUltrasoundAi/: CMakeLists.txt
SlicerExtension/LiveUltrasoundAi/LumpNavAISimulation/: CMakeLists.txt  LumpNavAISimulation.py
SlicerExtension/LiveUltrasoundAi/LumpNavAISimulation/Resources/UI/: LumpNavAISimulation.ui  LumpNavAISimulation_ui.py
SlicerExtension/LiveUltrasoundAi/PrepareSpineData/: CMakeLists.txt  PrepareSpineData.py
SlicerExtension/LiveUltrasoundAi/PrepareSpineData/Resources/UI/: PrepareSpineData.ui
SlicerExtension/LiveUltrasoundAi/SegmentationUNet/: SegmentationUNet.py
SlicerExtension/LiveUltrasoundAi/SegmentationUNet/Resources/ProcessScripts/: LivePredictions.slicer.py
SlicerExtension/LiveUltrasoundAi/SingleSliceSegmentation/: CMakeLists.txt  SingleSliceSegmentation.py
SlicerExtension/LiveUltrasoundAi/SingleSliceSegmentation/Resources/UI/: SingleSliceSegmentation.ui
SlicerExtension/LiveUltrasoundAi/TorchLiveUs/: CMakeLists.txt  TorchLiveUs.py
SlicerExtension/LiveUltrasoundAi/TorchLiveUs/Resources/UI/: TorchLiveUs.ui
SlicerExtension/LiveUltrasoundAi/TorchSequenceSegmentation/: CMakeLists.txt  README.md  TorchSequenceSegmentation.py
SlicerExtension/LiveUltrasoundAi/TorchSequenceSegmentation/Resources/UI/: TorchSequenceSegmentation.ui
SlicerExtension/LiveUltrasoundAi/TorchSequenceSegmentation/Testing/: CMakeLists.txt
SlicerExtension/LiveUltrasoundAi/TorchSequenceSegmentation/Testing/Python/: CMakeLists.txt
UltrasoundObjectDetection/: README.md  RealTimeInferenceInWindow.py  RealtimeInferenceOverOpenIGTLink.py  RealtimeSegmentationOverOpenIGTLink.py  SlicerVectorVolumeToSequenceNode.py  TEST_ConvertScanToLinear.ipynb  TEST_ExportAllFramesFromDicom.ipynb  TEST_LaunchPlusServerInBackground.ipynb  TEST_MultiPrediction.py  TestOpenIGTLink.ipynb  custom_transforms.py  train_config.yaml  train_ultrasound.py  tranforms.py
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/: BLUELungUltrasound.py  CMakeLists.txt
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/BLUELungUltrasound/: BLUELungUltrasound.py  CMakeLists.txt  default_plus_config.xml
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/BLUELungUltrasound/Resources/UI/: BLUELungUltrasound.ui
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/BLUELungUltrasound/Resources/model/utils/: general.py
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/Resources/UI/: BLUELungUltrasound.ui  LumpNav.qss
UltrasoundObjectDetection/SlicerModule/BLUELungUltrasound/Resources/model/: lung_us.yml  model.py
UltrasoundSegmentation/: 256test.csv  BatchPrediction.ipynb  BreastSegmentationStudy-TF2.ipynb  F-ScorePlotTest.ipynb  ListGirderFolder.ipynb  QueensSagittal.csv  README.md  RealtimeInferenceOverOpenIGTLink.py  SagittalSpineSegmentationStudy-256.ipynb  SagittalSpineSegmentationStudy-TF2.ipynb  SagittalSpineSegmentationTest-TF2.ipynb  SequenceSegmentation3-TF2.ipynb  ShowDataSamples.ipynb  Slicer_PrepareSceneForSegmentation.ipynb  SpineSegmentationVisualTest.ipynb  SpineSegmentationVisualTestFunctions.ipynb  Test_BatchGenerator.ipynb  UNet.py  UltrasoundDataset.py  VerdureSagittal.csv  aggregate_results_csv.py  config.yaml  consolidate_metrics_.py  convert_to_slice.py  datasets.py  download_data.py  environment.yml  export_model.py  extract_scanlines.py  generate_models_csv.py  ggnet_train.py  losses.py  lr_scheduler.py  metrics.py  nnunet_utils.py  prepare_data.py  prepare_data_config.yaml  sagittal_spine_segmentation_unet.py  scanconvert_config.yaml  test.py  (+12 more)
UltrasoundSimulation/: CombineNumpyArray.ipynb  NeedleSequenceExport.ipynb  NeedleSequenceExportVolume.ipynb  NeedleSequenceExport_Volume.ipynb  OverlayImages.ipynb  SimulateImages.ipynb  Telemed_Ascension3DG.xml  ViewNumpyArray.ipynb  ViewNumpyArrays.ipynb  pix2pix_volume.ipynb
UsAnnotationExport/: CMakeLists.txt  UsAnnotationExport.py
(+221 files in other folders)
